--- a/views/layout.pug
+++ b/views/layout.pug
@@ -109,6 +109,13 @@ html(lang="es")
       .text-success { /* Este es ahora el ícono de Emergencia (Rojo) */
         color: #D32F2F !important; /* Rojo intenso para el ícono de Emergencia */
       }
+
+      .alert-success {
+        background-color:rgb(12, 182, 21) !important;
+        border-color: #badbcc !important;
+        color:rgb(255, 255, 255) !important;
+        font-weight: bold;
+      }
       
 
   body
